[package]
name = "bastion_character_sheet"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "image", "svg", "tokio"] }
once_cell = "1.21.3"
rand = "0.9.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
